--- a/mcacountdown/betastyle.css
+++ b/mcacountdown/betastyle.css
@@ -1976,7 +1976,7 @@ a:hover:active {
     }
     .schedule-progress {
         height: 100%;
-        background: #141414e5;
+        background: var(--progressbarblur);
         box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
         backdrop-filter: blur(75px);
         -webkit-backdrop-filter: blur(75px);
