--- a/mcacountdown/betastyle.css
+++ b/mcacountdown/betastyle.css
@@ -2345,8 +2345,8 @@ z-index: 1000;
 width: var(--toast-width);
 margin-bottom: 10px;
 border-radius: 12px;
-background: rgba(14, 14, 14, 0.65);
-box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+background: var(--blurbackground);
+box-shadow: var(--blurbackgroundshadowcolor);
 backdrop-filter: blur(12px);
 -webkit-backdrop-filter: blur(12px);
 border: 1px solid rgba(125, 125, 125, 0.3);
