--- a/mcacountdown/betastyle.css
+++ b/mcacountdown/betastyle.css
@@ -111,11 +111,12 @@ display: inline-block;
 
 #animatedbackground {
     opacity: 1;
-    transition: 1s opacity ease-in-out;
+    transition: opacity 0.5s ease-in-out;
     position:fixed;
     z-index:-3;
     left:0;
     top:0;
+    will-change: opacity;
 }
 
 .backgroundpicker {
