--- a/mcacountdown/betastyle.css
+++ b/mcacountdown/betastyle.css
@@ -392,7 +392,7 @@ form {
 }
 
 #searchTypeToggle:hover #selectedSpeedDiv{
-    background-color: #8426FF;
+    background-color: #8426FF !important;
 }
 
 
