--- a/mcacountdown/betastyle.css
+++ b/mcacountdown/betastyle.css
@@ -1924,7 +1924,33 @@ a:hover:active {
         padding-left: 20px;
         font-family: "Dosis";
         font-size:15px;
+
+        box-shadow: 0 2px 15px rgba(0, 0, 0, 0.08), /* bottom soft shadow */
+        inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);
     }
+
+input[type="input"]::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  border-radius: 30px;
+  background: linear-gradient(to bottom right, rgba(255,255,255,0.05), transparent);
+  pointer-events: none;
+  mix-blend-mode: screen;
+  z-index:10000000;
+}
+
+input[type="input"]::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  border-radius: 30px;
+  pointer-events: none;
+  z-index: 1000000;
+
+  box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 0 18px rgba(255, 255, 255, 0.3);
+  border: 1.54px solid rgba(255, 255, 255, 0.1);
+}
  
     input[type="input"] + button {
         position: absolute;
