--- a/mcacountdown/betastyle.css
+++ b/mcacountdown/betastyle.css
@@ -1929,17 +1929,6 @@ a:hover:active {
         inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);
     }
 
-input[type="input"]::after {
-  content: "";
-  position: absolute;
-  inset: 0;
-  border-radius: 30px;
-  background: linear-gradient(to bottom right, rgba(255,255,255,0.05), transparent);
-  pointer-events: none;
-  mix-blend-mode: screen;
-  z-index:10000000;
-}
-
 input[type="input"]::before {
   content: "";
   position: absolute;
@@ -1948,7 +1937,7 @@ input[type="input"]::before {
   pointer-events: none;
   z-index: 1000000;
 
-  box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 0 18px rgba(255, 255, 255, 0.3);
+  box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3);
   border: 1.54px solid rgba(255, 255, 255, 0.1);
 }
  
@@ -1967,26 +1956,15 @@ input[type="input"]::before {
         inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);
     }
 
-input[type="input"] + button::after {
-  content: "";
-  position: absolute;
-  inset: 0;
-  border-radius: 100px;
-  background: linear-gradient(to bottom right, rgba(255,255,255,0.05), transparent);
-  pointer-events: none;
-  mix-blend-mode: screen;
-  z-index:10000000;
-}
-
 input[type="input"] + button::before {
   content: "";
   position: absolute;
   inset: 0;
-  border-radius: 100px;
+  border-radius: 30px;
   pointer-events: none;
   z-index: 1000000;
 
-  box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 0 18px rgba(255, 255, 255, 0.3);
+  box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3);
   border: 1.54px solid rgba(255, 255, 255, 0.1);
 }
     
