--- a/mcacountdown/betastyle.css
+++ b/mcacountdown/betastyle.css
@@ -31,6 +31,9 @@
     /*#ffffffe5*/
     --titlergba: rgba(255,255,255,0);
     /*rgba(0,0,0,0)*/
+
+    --cardborder:1.54px solid rgba(255, 255, 255, 0.1);
+    /*1.54px solid rgba(0, 0, 0, 0.1);*/
 }
 
 #body{
@@ -1966,7 +1969,7 @@ a:hover:active {
   pointer-events: none;
   z-index: 1000000;
   box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 0 18px rgba(255, 255, 255, 0.3);
-  border: 1.54px solid rgba(0, 0, 0, 0.1);
+  border: var(--cardborder);
 }
 
 #qrcodecontainerdiv{
@@ -1994,7 +1997,7 @@ a:hover:active {
   pointer-events: none;
   z-index: 1000000;
   box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 0 18px rgba(255, 255, 255, 0.3);
-  border: 1.54px solid rgba(0, 0, 0, 0.1);
+  border: var(--cardborder);
 }
     
     /*countdown schedule*/
